# django-lunchlog

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
lunchlog/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
receipts/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
receipts/migrations/: 0001_initial.py  0002_receipt_updated_at.py  0002_receiptimage.py  0003_placeinfo.py
tests/: __init__.py  test_receipts.py  test_users.py
users/: serializers.py  views.py
